--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2014-10-01  Kevin Ushey  <kevinushey@gmail.com>
+
+        * inst/include/Rcpp/vector/ListOf.h ListOf<T> inherits relevant proxies
+        * inst/unitTests/cpp/ListOf.cpp: Idem
+        * inst/unitTests/runit.ListOf.R: Idem
+
 2014-09-29  Dirk Eddelbuettel  <edd@debian.org>
 
         * debian/*: Changes for Debian release of 0.11.3
