--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2014-10-03  JJ Allaire  <jj@rstudio.org>
+
+        * R/Attributes.R: Only look for plugins in the package's namespace
+        (rather than entire search path)
+
 2014-10-01  Kevin Ushey  <kevinushey@gmail.com>
 
         * inst/include/Rcpp/vector/ListOf.h ListOf<T> inherits relevant proxies
