--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2014-11-01  Dirk Eddelbuettel  <edd@debian.org>
+
+        * src/api.cpp: Do not include execinfo.h on AIX, per r-devel discussion
+        with Mike Beddo, and http://sf.net/p/predef/wiki/OperatingSystems/
+
 2014-10-29  Dirk Eddelbuettel  <edd@debian.org>
 
         * inst/include/Rcpp/Rmath.h: Comment out R::[dpqr]nbinom_mu functions as
