--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-11-24  Dirk Eddelbuettel  <edd@debian.org>
+
+        * inst/include/Rcpp/config.h: Release version is still 0.11.3
+
 2014-11-23  Dirk Eddelbuettel  <edd@debian.org>
 
         * inst/include/Rcpp/config.h: New macro RcppDevVersion to account for
