--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2014-11-25  Dirk Eddelbuettel  <edd@debian.org>
+
+        * inst/include/Rcpp/grow.h: Apply additional Shield<> use around tail
+        object as suggested by Martin Morgan on the rcpp-devel list
+
 2014-11-24  Dirk Eddelbuettel  <edd@debian.org>
 
         * inst/include/Rcpp/config.h: Release version is still 0.11.3
