--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-12-29  Kevin Ushey  <kevinushey@gmail.com>
+
+        * inst/include/Rcpp/macros/macros.h: reformat for legibility
+
 2014-12-11  Yixuan Qiu <yixuan.qiu@cos.name>
 
         * inst/include/Rcpp/internal/r_vector.h: Internal functions to
