--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 2014-12-31  Dirk Eddelbuettel  <edd@debian.org>
 
-        * inst/include/Rcpp/sugar/functions/mean.h: Support INTSXP  
+        * inst/include/Rcpp/sugar/functions/mean.h: Support int and complex
 
 2014-12-30  Dirk Eddelbuettel  <edd@debian.org>
 
