--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,11 @@
 2015-01-01  Dirk Eddelbuettel  <edd@debian.org>
 
         * inst/include/Rcpp/sugar/functions/mean.h: Return type is double, not
-        storage type; also added logical vector case 
+        storage type; also added logical vector case; also added integer case
+        to correctly deal with NA values
+
+        * inst/unitTests/runit.sugar.R: Added unit tests for new sugar mean()
+        * inst/unitTests/cpp/sugar.cpp: C++ side of new unit tests
 
 2014-12-31  Dirk Eddelbuettel  <edd@debian.org>
 
