--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2015-01-08  Dirk Eddelbuettel  <edd@debian.org>
+
+        * inst/examples/OpenMP/GNUmakefile: Renamed from Makefile because it
+        contains GNU make extentions (which we happen to like)
+        * inst/examples/ConvolveBenchmarks: Ditto
+        
 2015-01-02  Kevin Ushey  <kevinushey@gmail.com>
 
         * inst/include/Rcpp/sugar/functions/setdiff.h: fix for setequals
