added ChangeLog and NEWS entries for Wush's pull request

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,11 @@
         * vignettes/getCurrentVersionsOfCitedPackages.R: New helper function
         * .Rbuildignore: Added vignettes/getCurrentVersionsOfCitedPackages.R
 
+2015-01-05  Wush Wu <wush978@gmail.com>
+
+        * inst/include/Rcpp/sugar/functions/var.h: Support four vector types
+        * inst/unitTests/runit.sugar.var.R: Added corresponding tests
+
 2015-01-16  Kevin Ushey  <kevinushey@gmail.com>
 
         * inst/include/Rcpp/String.h: fix push_front()
