--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2015-01-25  Kevin Ushey  <kevinushey@gmail.com>
+
+        * inst/include/Rcpp/utils/tinyformat.h: define an error handler for
+        tinyformat (using ::Rcpp::stop) to not spill assert
+
 2015-01-20  Dirk Eddelbuettel  <edd@debian.org>
 
         * DESCRIPTION: Release 0.11.4
