--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2014-02-02  JJ Allaire  <jj@rstudio.org>
+
+        * inst/include/Rcpp/XPtr.h: Improvements to XPtr including new
+        checked_get and release functions and improved behavior (throw
+        an exception rather than crash) when a NULL external pointer is
+        dereferenced.
+        * inst/unitTests/runit.XPTr.R: tests for XPtr improvements.
+        * inst/unitTests/cpp/XPtr.cpp: tests for XPtr improvements.
+
 2015-01-25  Kevin Ushey  <kevinushey@gmail.com>
 
         * inst/include/Rcpp/utils/tinyformat.h: define an error handler for
