--- a/vignettes/Rcpp-package.Rnw
+++ b/vignettes/Rcpp-package.Rnw
@@ -183,14 +183,10 @@ using namespace Rcpp;
 List rcpp_hello_world();
 RcppExport SEXP mypackage_rcpp_hello_world() {
 BEGIN_RCPP
-    SEXP __sexp_result;
-    {
-        Rcpp::RNGScope __rngScope;
-        List __result = rcpp_hello_world();
-        PROTECT(__sexp_result = Rcpp::wrap(__result));
-    }
-    UNPROTECT(1);
-    return __sexp_result;
+    Rcpp::RObject __result;
+    Rcpp::RNGScope __rngScope;
+    __result = Rcpp::wrap(rcpp_hello_world());
+    return __result;
 END_RCPP
 }
 @
