--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2015-02-12  JJ Allaire  <jj@rstudio.org>
+
+        * DESCRIPTION: bump version
+        * src/attributes.cpp: Add rng parameter to Rcpp::export to 
+        prevent inclusion of RNGScope in generated code.
+
 2015-02-06  Kevin Ushey  <kevinushey@gmail.com>
 
         * inst/include/Rcpp/vector/Subsetter.h: compare CHARSXP pointers
