--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2015-02-13  JJ Allaire  <jj@rstudio.org>
+
+        * src/attributes.cpp: Allow 'R' to come immediately after '***'
+        for defining embedded R code chunks in sourceCpp
+
 2015-02-12  JJ Allaire  <jj@rstudio.org>
 
         * DESCRIPTION: bump version
