Enable preview of vignettes in RStudio
Make a few changes to make the 'Compile PDF' button work for Rcpp vignettes in RStudio:

- Set Sweave as the default Rnw processor in RStudio project file
- Magic comment to specify highlight package as the Sweave driver (note this is only recognized by development versions of RStudio >= v0.99.258)
- Turn off Sweave concordance (enabling it produced errors, not sure why)
- Add artifacts of PDF preview to .gitignore for vignettes directory

--- a/vignettes/Rcpp-FAQ.Rnw
+++ b/vignettes/Rcpp-FAQ.Rnw
@@ -1,8 +1,11 @@
+% !Rnw driver = highlight::HighlightWeaveLatex()
 \documentclass[10pt]{article}
 %\VignetteIndexEntry{Rcpp-FAQ}
 %\VignetteEngine{highlight::highlight}
 %\VignetteKeywords{Rcpp, FAQ}
 %\VignetteDepends{Rcpp}
+\SweaveOpts{concordance=FALSE}
+
 \usepackage[USletter]{vmargin}
 \setmargrb{0.75in}{0.75in}{0.75in}{0.75in}
 
