--- a/vignettes/Rcpp-introduction.Rnw
+++ b/vignettes/Rcpp-introduction.Rnw
@@ -1,9 +1,11 @@
+% !Rnw driver = highlight::HighlightWeaveLatex()
 %% use JSS class -- use 'nojss' to turn off header
 \documentclass[shortnames,nojss,article]{jss}
 \usepackage{booktabs,flafter,thumbpdf}
 %\VignetteIndexEntry{Rcpp-introduction}
 %\VignetteKeywords{Rcpp, foreign function interface, .Call, C++, R}
 %\VignetteDepends{Rcpp}
+\SweaveOpts{concordance=FALSE}
 
 \author{Dirk Eddelbuettel\\Debian Project \And Romain Fran\c{c}ois\\\proglang{R} Enthusiasts}
 \Plainauthor{Dirk Eddelbuettel, Romain Fran\c{c}ois}
