--- a/vignettes/Rcpp-quickref.Rnw
+++ b/vignettes/Rcpp-quickref.Rnw
@@ -1,8 +1,10 @@
+% !Rnw driver = highlight::HighlightWeaveLatex()
 \documentclass[8pt,twocolumn,a4paper]{article}
 %\VignetteIndexEntry{Rcpp-quickref}
 %\VignetteEngine{highlight::highlight}
 %\VignetteKeywords{Rcpp, reference}
 %\VignetteDepends{Rcpp}
+\SweaveOpts{concordance=FALSE}
 
 \setlength{\hoffset}{-0.8in}
 \setlength{\voffset}{-0.8in}
