--- a/vignettes/Rcpp-sugar.Rnw
+++ b/vignettes/Rcpp-sugar.Rnw
@@ -1,8 +1,10 @@
+% !Rnw driver = highlight::HighlightWeaveLatex()
 \documentclass[10pt]{article}
 %\VignetteIndexEntry{Rcpp-sugar}
 %\VignetteEngine{highlight::highlight}
 %\VignetteKeywords{Rcpp, syntactic sugar}
 %\VignetteDepends{Rcpp}
+\SweaveOpts{concordance=FALSE}
 
 \usepackage[USletter]{vmargin}
 \setmargrb{0.75in}{0.75in}{0.75in}{0.75in}
