--- a/vignettes/Rcpp-unitTests.Rnw
+++ b/vignettes/Rcpp-unitTests.Rnw
@@ -1,7 +1,9 @@
+% !Rnw driver = highlight::HighlightWeaveLatex()
 \documentclass[10pt]{article}
 %\VignetteIndexEntry{Rcpp-unitTests}
 %\VignetteKeywords{R,Rcpp,unit tests}
 %\VignetteDepends{Rcpp}
+\SweaveOpts{concordance=FALSE}
 
 \usepackage{vmargin}
 \setmargrb{0.75in}{0.75in}{0.75in}{0.75in}
