--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2015-02-14  JJ Allaire  <jj@rstudio.org>
+
+        * Rcpp.Rproj: Specify Sweave as Rnw handler for RStudio
+        * vignettes/*.Rnw: Add driver magic comment and turn off 
+        Sweave concordance.
+        * vignettes/.gitignore: Ignore artifacts of PDF preview
+
 2015-02-13  Dirk Eddelbuettel  <edd@debian.org>
 
         * .travis.yml (install): Switch to using ppa:edd/misc to install all the
