--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2015-02-17  JJ Allaire  <jj@rstudio.org>
+
+        * vignettes/Rcpp-attributes.Rnw: Update attributes vignette
+        with docs on new features,
+
 2015-02-14  JJ Allaire  <jj@rstudio.org>
 
         * Rcpp.Rproj: Specify Sweave as Rnw handler for RStudio
