--- a/vignettes/Rcpp-attributes.Rnw
+++ b/vignettes/Rcpp-attributes.Rnw
@@ -428,7 +428,7 @@ shared functions, classes, enums, etc. For example:
 #ifndef __UTILITIES__
 #define __UTILITIES__
 
-double timesTwo(double x) {
+inline double timesTwo(double x) {
     return x * 2;
 }
 
@@ -439,6 +439,8 @@ Note the use of the \texttt{\#ifndef} include guard, this is import to ensure
 that code is not included more than once in a source file. You should 
 use an include guard and be sure to pick a unique name for the corresponding
 \texttt{\#define}. 
+
+Also note the use of the \code{inline} keyword preceding the function. This isn't necessary for \code{sourceCpp} however if you are working on an R package then it's important to ensure that there are not multiple definitions of functions included from header files. Classes fully defined in header files automatically have inline semantics so don't require this treatment.
 
 To use this code in a source file you'd just include
 it based on it's relative path (being sure to use \texttt{"} as the 
