--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2015-02-20  Lionel Henry  <lionel.hry@gmail.com>
+
+        * inst/include/Rcpp/Function.h New Function constructors that will
+        perform function-lookup in an environment or in a namespace.
+
 2015-02-19  Dirk Eddelbuettel  <edd@debian.org>
 
         * DESCRIPTION: Bump Version: and Date:
