--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,8 @@
 2015-02-24  JJ Allaire  <jj@rstudio.org>
 
         * src/attributes.cpp: Guard against includes referencing themselves
-        (and thus creating an endless loop of include processing).
+        (and thus creating an endless loop of include processing); Process
+        attributes in included files.
         
 2015-02-20  Lionel Henry  <lionel.hry@gmail.com>
 
