sourceCpp: automatically build implementation files (*.cc; *.cpp) corresponding to local header files if they exist

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,7 +2,8 @@
 
         * src/attributes.cpp: Guard against includes referencing themselves
         (and thus creating an endless loop of include processing); Process
-        attributes in included files.
+        attributes in included files; Automatically build implementation files
+        (*.cc; *.cpp) corresponding to local header files if they exist.
         
 2015-02-20  Lionel Henry  <lionel.hry@gmail.com>
 
