--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2015-03-02  Dirk Eddelbuettel  <edd@debian.org>
+
+        * src/api.cpp: Commented-out print() in global namespace
+        * src/Rcpp_init.cpp: Commented-out registration of print()
+        * inst/include/Rcpp/routines.h: Commented-out initialization
+
 2015-03-01  Dirk Eddelbuettel  <edd@debian.org>
 
         * src/api.cpp: New function print() as a wrapper around Rf_PrintValue()
