--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2015-03-03  Dirk Eddelbuettel  <edd@debian.org>
+
+        * DESCRIPTION: Release 0.11.5
+        * inst/NEWS.Rd: Release 0.11.5
+        * inst/include/Rcpp/config.h: Release 0.11.5
+
+        * debian/*: Changes for Debian release of 0.11.5
+
 2015-03-02  Dirk Eddelbuettel  <edd@debian.org>
 
         * inst/include/Rcpp/print.h (Rcpp): New inline function Rcpp::print()
@@ -127,7 +135,7 @@
         * inst/NEWS.Rd: Release 0.11.4
         * inst/include/Rcpp/config.h: Release 0.11.4
 
-        * debian/*: Changes for Debian release of 0.11.3
+        * debian/*: Changes for Debian release of 0.11.4
 
 2015-01-19  Kevin Ushey  <kevinushey@gmail.com>
 
