--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,7 @@
 2015-03-03  Dirk Eddelbuettel  <edd@debian.org>
 
-        * DESCRIPTION: Release 0.11.5
-        * inst/NEWS.Rd: Release 0.11.5
-        * inst/include/Rcpp/config.h: Release 0.11.5
-
-        * debian/*: Changes for Debian release of 0.11.5
+        * inst/include/Rcpp/routines.h: Additional application of the
+        'attribute_hidden' macro for a number of routines in Rcpp::internal
 
 2015-03-02  Dirk Eddelbuettel  <edd@debian.org>
 
