--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2015-03-04  Dirk Eddelbuettel  <edd@debian.org>
+
+        * DESCRIPTION: Release 0.11.5
+        * inst/NEWS.Rd: Release 0.11.5
+        * inst/include/Rcpp/config.h: Release 0.11.5
+
+        * debian/*: Changes for Debian release of 0.11.5
+        
 2015-03-03  Dirk Eddelbuettel  <edd@debian.org>
 
         * inst/include/Rcpp/routines.h: Additional application of the
