--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-04-14  Romain Francois  <romain@r-enthusiasts.com>
+
+        * inst/include/Rcpp/api/meat/is.h: added is__simple<Rcomplex>
+
 2015-04-12  Dirk Eddelbuettel  <edd@debian.org>
 
         * vignettes/Rcpp-FAQ.Rnw: Also load Rcpp to make cppFunction visible
