--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2015-04-22  Kevin Ushey  <kevinushey@gmail.com>
+
+        * inst/include/Rcpp/utils/tinyformat.h: don't use C++11 features
+
 2015-04-14  Dirk Eddelbuettel  <edd@debian.org>
 
         * .travis.yml (sudo): Adding 'sudo: required' to force older Travis backend
