--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rcpp (0.11.6-1) unstable; urgency=low
+
+  * New upstream release
+
+ -- Dirk Eddelbuettel <edd@debian.org>  Fri, 01 May 2015 06:20:46 -0500
+
 rcpp (0.11.5-1) unstable; urgency=low
 
   * New upstream release
