--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2015-06-18  Dirk Eddelbuettel  <edd@debian.org>
+
+        * R/Attributes.R (evalCpp): Add support for plugings argument
+        * man/evalCpp.Rd: Document argument
+
 2015-06-07  JJ Allaire <jj@rstudio.org>
 
         * src/attributes.cpp: Don't load sourceCpp dynamic library if it's
