--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2015-07-11  Matt P. Dziubinski  <matdzb@gmail.com>
+
+        * inst/include/Rcpp/sugar/functions/var.h: Variance -- changed from
+        the unstable formula back to the stable (two-pass) formula, fixed
+        support for complex numbers (formula correction).
+        * inst/unitTests/runit.sugar.var.R: Added tests for complex variance
+        computation, applied simple code refactoring.
+
+2015-07-11  Kevin Ushey  <kevinushey@gmail.com>
+
+        * .clang_format: Added
+
 2015-07-04  Dirk Eddelbuettel  <edd@debian.org>
 
         * vignettes/Rcpp.bib: Updated reference to several CRAN packages
