fix crash on second call to sourceCpp
- Revert previous code which attempted to avoid calling dyn.load on libraries already loaded (which in turn had triggered an R bug that corrupts the load table when this occurs). That code's logic was not correct.

- Generate unique shared object paths using a simple static counter rather than a call to sample. The previous issue must have been triggered by sample returning the same integer twice, which in turn may have been triggered by some maniplation of the rng state by expm?.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2015-07-14  JJ Allaire <jj@rstudio.org>
+
+        * src/attributes.cpp: fix crash on second call to sourceCpp
+
 2015-07-07  Matt P. Dziubinski  <matdzb@gmail.com>
 
         * inst/include/Rcpp/sugar/functions/var.h: Variance -- changed from
