--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2015-07-24  Dirk Eddelbuettel  <edd@debian.org>
+
+        * DESCRIPTION: Release 0.12.0
+        * inst/NEWS.Rd: Release 0.12.0
+	* vignettes/Rcpp.bib: Release 0.12.0
+        * inst/include/Rcpp/config.h: Release 0.12.0
+
+        * debian/*: Changes for Debian release of 0.12.0
+
 2015-07-23  Dirk Eddelbuettel  <edd@debian.org>
 
         * inst/include/Rcpp/Symbol.h: Use Rf_installChar(x) instead of
@@ -120,7 +129,7 @@
         * inst/NEWS.Rd: Release 0.11.6
         * inst/include/Rcpp/config.h: Release 0.11.6
 
-        * debian/*: Changes for Debian release of 0.11.5
+        * debian/*: Changes for Debian release of 0.11.6
 
 2015-04-27  JJ Allaire  <jj@rstudio.org>
 
