--- a/vignettes/Rcpp.bib
+++ b/vignettes/Rcpp.bib
@@ -134,10 +134,10 @@
 @Manual{CRAN:Rcpp,
   title =	 {{Rcpp}: Seamless {R} and {C++} Integration},
   author =	 {Dirk Eddelbuettel and Romain Fran\c{c}ois and JJ
-                  Allaire and John Chambers and Douglas Bates and
-                  Kevin Ushey},
+                  Allaire and Kevin Ushey and Qiang Kou and
+                  John Chambers and Douglas Bates},
   year =	 2015,
-  note =	 {R package version 0.11.6},
+  note =	 {R package version 0.12.0},
   url =		 CRAN # "package=Rcpp"
 }
 
