--- a/vignettes/Rcpp.bib
+++ b/vignettes/Rcpp.bib
@@ -468,9 +468,9 @@
   author =	 RCoreTeam,
   organization = RFoundation,
   address =	 {Vienna, Austria},
-  year =	 2013,
+  year =	 2015,
   title =	 "R Installation and Administration",
-  note =	 {{ISBN} 3-900051-09-7},
+  annote =	 {{ISBN} 3-900051-09-7},
   url =		 manuals # "R-admin.html"
 }
 
@@ -478,7 +478,7 @@
   author =	 RCoreTeam,
   organization = RFoundation,
   address =	 {Vienna, Austria},
-  year =	 2012,
+  year =	 2015,
   title =	 "Writing R extensions",
   annote =	 {{ISBN} 3-900051-11-9},
   url =		 manuals # "R-exts.html"
@@ -488,7 +488,7 @@
   author =	 RCoreTeam,
   organization = RFoundation,
   address =	 {Vienna, Austria},
-  year =	 2013,
+  year =	 2015,
   title =	 "R internals",
   annote =	 {{ISBN} 3-900051-14-3},
   url =		 manuals # "R-ints.html"
@@ -500,7 +500,7 @@
   author =	 RCoreTeam,
   organization = RFoundation,
   address =	 {Vienna, Austria},
-  year =	 2013,
+  year =	 2015,
   url =		 {http://www.R-project.org/},
 }
 
@@ -508,7 +508,7 @@
   author =	 RCoreTeam,
   organization = RFoundation,
   address =	 {Vienna, Austria},
-  year =	 2013,
+  year =	 2015,
   title =	 "R language",
   annote =	 {{ISBN} 3-900051-13-5},
   url =		 manuals # "R-lang.html"
