--- a/vignettes/Rcpp.bib
+++ b/vignettes/Rcpp.bib
@@ -232,6 +232,14 @@
   url =		 CRAN # "package=RcppGSL"
 }
 
+@Manual{CRAN:RcppZiggurat,
+  title =	 {RcppZiggurat: Rcpp Integration of Different Ziggurat Normal RNG Implementations},
+  author = 	 {Dirk Eddelbuettel},
+  year =	 2015,
+  note =	 {R package version 0.1.3},
+  url =		 CRAN # "package=RcppZiggurat"
+}
+
 @Manual{CRAN:Rserve,
   title =	 {Rserve: Binary R server},
   author =	 {Simon Urbanek},
