updated RcppGSL entry

--- a/vignettes/Rcpp.bib
+++ b/vignettes/Rcpp.bib
@@ -226,9 +226,9 @@
 
 @Manual{CRAN:RcppGSL,
   title =	 {RcppGSL: Rcpp integration for GNU GSL vectors and matrices},
-  author = 	 {Romain Fran\c{c}ois and Dirk Eddelbuettel},
+  author = 	 {Dirk Eddelbuettel and Romain Fran\c{c}ois},
   year =	 2015,
-  note =	 {R package version 0.2.5},
+  note =	 {R package version 0.3.0},
   url =		 CRAN # "package=RcppGSL"
 }
 
